fixed heading wrapping

--- a/src/sass/uslugi/all_services.sass
+++ b/src/sass/uslugi/all_services.sass
@@ -46,6 +46,7 @@
                     transition: color .6s
     &__heading
         position: relative
+        word-break: break-word;
         &:after
             content: ''
             width: 20px
